11.4 Add FioWorker by WorkerList and Delete enable publish to Worker  (Убрали возможность видеть кнопку разрешить публикуацию для специалистов, прописали ФИО исполнителя в карточкаъ специалистов)